# local-file-transfer

./: README.md
backend/: CMakeLists.txt
backend/include/: fileTransferClient.hpp  fileTransferServer.hpp  networkDiscovery.hpp  protocol.hpp
backend/src/: fileTransferClient.cpp  fileTransferServer.cpp  main.cpp  networkDiscovery.cpp  protocol.cpp
